--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body>
-<p>apellido nombre fecha y hora</p>
+<p>Blanco Agustin 25/6 12:03</p>
 </body>
 </html>
